# cms

./: Makefile
backend/: Makefile  ecosystem.config.js  main.py  openapi.json  pyproject.toml
backend/samples/: sample.md
backend/src/: constants.py  dependencies.py  main.py
backend/src/domain/: file_repository.py  post.py  post_repository.py
backend/src/infra/db/: migrate.py
backend/src/infra/file/: disk.py
backend/src/infra/post/: inmemory.py  sqlite.py
backend/src/presentation/: post.py  types.py
backend/src/scripts/: generate_openapi.py
docs/bruno/: Ping.yml  opencollection.yml
docs/bruno/Blog Post/: Create Blog Post.yml  Get Content.yml  Get Image.yml  Get Metadata.yml  folder.yml
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/.tanstack/tmp/: 07beb491-0058aeac920f2e14ca5caa9b242e9c1a
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/components/ui/: button.tsx  field.tsx  input.tsx
frontend/src/contexts/blog-post/components/: content.tsx  create-post-form.tsx  markdown-editor.tsx  post.css
frontend/src/contexts/blog-post/hooks/: useBlogPost.tsx  useCreateBlogPost.tsx  usePostMetadata.tsx  useValidateSlug.tsx
frontend/src/contexts/blog-post/lib/: createBlogPost.ts  fetchBlogPost.ts  fetchMetadata.ts  fetchPost.ts  fetchPostContent.ts  fetchPostImage.ts
frontend/src/routes/: $slug.tsx  __root.tsx  index.tsx
frontend/src/routes/create/: index.tsx
frontend/src/routes/qr-code/: index.tsx
frontend/src/types/: api.ts
(+4 files in other folders)
