[project]
name = "cms_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "markdown>=3.10.2",
    "python-multipart>=0.0.32",
]

[project.scripts]
start = "src.main:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]